--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Yetunde Sola-Adebayo",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "gravatar": "^1.8.0",
