--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
+    "config": "^3.3.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "gravatar": "^1.8.0",
@@ -26,6 +27,7 @@
     "mongoose": "^5.4.14",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.2",
     "validator": "^10.11.0"
   },
   "devDependencies": {
